--- a/work/testread.ipynb
+++ b/work/testread.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b3a0a7dc-1ec8-4092-ad7c-e34b77b84706",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "cd2e9a78-f6ad-4cab-85ba-035c63544ba5",
    "metadata": {},
    "outputs": [],
@@ -310,17 +310,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "c42fb812-a6e3-4188-962a-0bdcd24f397d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "27"
+       "2"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,25 +340,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "4cf2c469-2870-4adb-b8e3-95e53d8574d2",
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "pollution-data/main/pollution.parquet/year=2025/month=5/day=13/hour=3/b082cc4d7f844fb2b219eee5018d1fc9-0.parquet",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 10\u001b[39m\n\u001b[32m      2\u001b[39m path = \u001b[33m\"\u001b[39m\u001b[33mpollution-data/main/pollution.parquet/\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m      3\u001b[39m dataset = ds.dataset(\n\u001b[32m      4\u001b[39m     path,\n\u001b[32m      5\u001b[39m     \u001b[38;5;28mformat\u001b[39m=\u001b[33m\"\u001b[39m\u001b[33mparquet\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m      6\u001b[39m     partitioning=[\u001b[33m\"\u001b[39m\u001b[33myear\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mmonth\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mday\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mhour\u001b[39m\u001b[33m\"\u001b[39m],\n\u001b[32m      7\u001b[39m     filesystem=fs\n\u001b[32m      8\u001b[39m )\n\u001b[32m---> \u001b[39m\u001b[32m10\u001b[39m table = \u001b[43mdataset\u001b[49m\u001b[43m.\u001b[49m\u001b[43mto_table\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     11\u001b[39m df = table.to_pandas()\n\u001b[32m     12\u001b[39m df.info()\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib/python3.11/site-packages/pyarrow/_dataset.pyx:574\u001b[39m, in \u001b[36mpyarrow._dataset.Dataset.to_table\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib/python3.11/site-packages/pyarrow/_dataset.pyx:3865\u001b[39m, in \u001b[36mpyarrow._dataset.Scanner.to_table\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib/python3.11/site-packages/pyarrow/error.pxi:155\u001b[39m, in \u001b[36mpyarrow.lib.pyarrow_internal_check_status\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib/python3.11/site-packages/pyarrow/error.pxi:89\u001b[39m, in \u001b[36mpyarrow.lib.check_status\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib/python3.11/site-packages/pyarrow/_fs.pyx:1559\u001b[39m, in \u001b[36mpyarrow._fs._cb_open_input_file\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/lib/python3.11/site-packages/pyarrow/fs.py:419\u001b[39m, in \u001b[36mFSSpecHandler.open_input_file\u001b[39m\u001b[34m(self, path)\u001b[39m\n\u001b[32m    416\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[34;01mpyarrow\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m PythonFile\n\u001b[32m    418\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m.fs.isfile(path):\n\u001b[32m--> \u001b[39m\u001b[32m419\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mFileNotFoundError\u001b[39;00m(path)\n\u001b[32m    421\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m PythonFile(\u001b[38;5;28mself\u001b[39m.fs.open(path, mode=\u001b[33m\"\u001b[39m\u001b[33mrb\u001b[39m\u001b[33m\"\u001b[39m), mode=\u001b[33m\"\u001b[39m\u001b[33mr\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mFileNotFoundError\u001b[39m: pollution-data/main/pollution.parquet/year=2025/month=5/day=13/hour=3/b082cc4d7f844fb2b219eee5018d1fc9-0.parquet"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1854 entries, 0 to 1853\n",
+      "Data columns (total 22 columns):\n",
+      " #   Column            Non-Null Count  Dtype                       \n",
+      "---  ------            --------------  -----                       \n",
+      " 0   timestamp         1854 non-null   datetime64[ns]              \n",
+      " 1   minute            1854 non-null   int64                       \n",
+      " 2   localtime         1854 non-null   datetime64[ns, Asia/Bangkok]\n",
+      " 3   province          1854 non-null   string                      \n",
+      " 4   district          1854 non-null   string                      \n",
+      " 5   district_id       1854 non-null   int64                       \n",
+      " 6   lat               1854 non-null   float64                     \n",
+      " 7   lon               1854 non-null   float64                     \n",
+      " 8   main.aqi          1854 non-null   int64                       \n",
+      " 9   components_co     1854 non-null   float64                     \n",
+      " 10  components_no     1854 non-null   float64                     \n",
+      " 11  components_no2    1854 non-null   float64                     \n",
+      " 12  components_o3     1854 non-null   float64                     \n",
+      " 13  components_so2    1854 non-null   float64                     \n",
+      " 14  components_pm2_5  1854 non-null   float64                     \n",
+      " 15  components_pm10   1854 non-null   float64                     \n",
+      " 16  components_nh3    1854 non-null   float64                     \n",
+      " 17  flow_timestamp    1854 non-null   datetime64[us]              \n",
+      " 18  year              1854 non-null   object                      \n",
+      " 19  month             1854 non-null   object                      \n",
+      " 20  day               1854 non-null   object                      \n",
+      " 21  hour              1854 non-null   object                      \n",
+      "dtypes: datetime64[ns, Asia/Bangkok](1), datetime64[ns](1), datetime64[us](1), float64(10), int64(3), object(4), string(2)\n",
+      "memory usage: 318.8+ KB\n"
      ]
     }
    ],
@@ -458,11 +476,278 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "dc07aa69-5468-4cc3-a36a-2cb7cbcb4f53",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2781 entries, 0 to 2780\n",
+      "Data columns (total 22 columns):\n",
+      " #   Column            Non-Null Count  Dtype                       \n",
+      "---  ------            --------------  -----                       \n",
+      " 0   timestamp         2781 non-null   datetime64[ns]              \n",
+      " 1   minute            2781 non-null   int64                       \n",
+      " 2   localtime         2781 non-null   datetime64[ns, Asia/Bangkok]\n",
+      " 3   province          2781 non-null   string                      \n",
+      " 4   district          2781 non-null   string                      \n",
+      " 5   district_id       2781 non-null   int64                       \n",
+      " 6   lat               2781 non-null   float64                     \n",
+      " 7   lon               2781 non-null   float64                     \n",
+      " 8   main.aqi          2781 non-null   int64                       \n",
+      " 9   components_co     2781 non-null   float64                     \n",
+      " 10  components_no     2781 non-null   float64                     \n",
+      " 11  components_no2    2781 non-null   float64                     \n",
+      " 12  components_o3     2781 non-null   float64                     \n",
+      " 13  components_so2    2781 non-null   float64                     \n",
+      " 14  components_pm2_5  2781 non-null   float64                     \n",
+      " 15  components_pm10   2781 non-null   float64                     \n",
+      " 16  components_nh3    2781 non-null   float64                     \n",
+      " 17  flow_timestamp    2781 non-null   datetime64[us]              \n",
+      " 18  year              2781 non-null   object                      \n",
+      " 19  month             2781 non-null   object                      \n",
+      " 20  day               2781 non-null   object                      \n",
+      " 21  hour              2781 non-null   object                      \n",
+      "dtypes: datetime64[ns, Asia/Bangkok](1), datetime64[ns](1), datetime64[us](1), float64(10), int64(3), object(4), string(2)\n",
+      "memory usage: 478.1+ KB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>minute</th>\n",
+       "      <th>localtime</th>\n",
+       "      <th>province</th>\n",
+       "      <th>district</th>\n",
+       "      <th>district_id</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lon</th>\n",
+       "      <th>main.aqi</th>\n",
+       "      <th>components_co</th>\n",
+       "      <th>...</th>\n",
+       "      <th>components_o3</th>\n",
+       "      <th>components_so2</th>\n",
+       "      <th>components_pm2_5</th>\n",
+       "      <th>components_pm10</th>\n",
+       "      <th>components_nh3</th>\n",
+       "      <th>flow_timestamp</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>hour</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2025-05-13 04:45:00.643749</td>\n",
+       "      <td>45</td>\n",
+       "      <td>2025-05-13 11:45:00.643749+07:00</td>\n",
+       "      <td>Krabi</td>\n",
+       "      <td>Nuea Khlong</td>\n",
+       "      <td>8108</td>\n",
+       "      <td>8.0747</td>\n",
+       "      <td>99.0036</td>\n",
+       "      <td>1</td>\n",
+       "      <td>104.09</td>\n",
+       "      <td>...</td>\n",
+       "      <td>37.94</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>1.54</td>\n",
+       "      <td>1.95</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>2025-05-13 04:44:59.753761</td>\n",
+       "      <td>year=2025</td>\n",
+       "      <td>month=5</td>\n",
+       "      <td>day=13</td>\n",
+       "      <td>hour=4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2025-05-13 04:45:00.780149</td>\n",
+       "      <td>45</td>\n",
+       "      <td>2025-05-13 11:45:00.780149+07:00</td>\n",
+       "      <td>Krabi</td>\n",
+       "      <td>Lam Thap</td>\n",
+       "      <td>8107</td>\n",
+       "      <td>8.0717</td>\n",
+       "      <td>99.2917</td>\n",
+       "      <td>1</td>\n",
+       "      <td>100.87</td>\n",
+       "      <td>...</td>\n",
+       "      <td>36.42</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>1.43</td>\n",
+       "      <td>1.81</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>2025-05-13 04:44:59.753761</td>\n",
+       "      <td>year=2025</td>\n",
+       "      <td>month=5</td>\n",
+       "      <td>day=13</td>\n",
+       "      <td>hour=4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2025-05-13 04:45:00.780432</td>\n",
+       "      <td>45</td>\n",
+       "      <td>2025-05-13 11:45:00.780432+07:00</td>\n",
+       "      <td>Krabi</td>\n",
+       "      <td>Plai Phraya</td>\n",
+       "      <td>8106</td>\n",
+       "      <td>8.5333</td>\n",
+       "      <td>98.8628</td>\n",
+       "      <td>1</td>\n",
+       "      <td>113.10</td>\n",
+       "      <td>...</td>\n",
+       "      <td>37.97</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>2.16</td>\n",
+       "      <td>2.65</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>2025-05-13 04:44:59.753761</td>\n",
+       "      <td>year=2025</td>\n",
+       "      <td>month=5</td>\n",
+       "      <td>day=13</td>\n",
+       "      <td>hour=4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2025-05-13 04:45:00.612240</td>\n",
+       "      <td>45</td>\n",
+       "      <td>2025-05-13 11:45:00.612240+07:00</td>\n",
+       "      <td>Krabi</td>\n",
+       "      <td>Khao Phanom</td>\n",
+       "      <td>8102</td>\n",
+       "      <td>8.2647</td>\n",
+       "      <td>99.0492</td>\n",
+       "      <td>1</td>\n",
+       "      <td>107.32</td>\n",
+       "      <td>...</td>\n",
+       "      <td>40.48</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>1.81</td>\n",
+       "      <td>2.10</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>2025-05-13 04:44:59.753761</td>\n",
+       "      <td>year=2025</td>\n",
+       "      <td>month=5</td>\n",
+       "      <td>day=13</td>\n",
+       "      <td>hour=4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2025-05-13 04:45:00.617396</td>\n",
+       "      <td>45</td>\n",
+       "      <td>2025-05-13 11:45:00.617396+07:00</td>\n",
+       "      <td>Krabi</td>\n",
+       "      <td>Ao Luek</td>\n",
+       "      <td>8105</td>\n",
+       "      <td>8.3775</td>\n",
+       "      <td>98.7217</td>\n",
+       "      <td>1</td>\n",
+       "      <td>119.90</td>\n",
+       "      <td>...</td>\n",
+       "      <td>42.27</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>2.94</td>\n",
+       "      <td>3.25</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>2025-05-13 04:44:59.753761</td>\n",
+       "      <td>year=2025</td>\n",
+       "      <td>month=5</td>\n",
+       "      <td>day=13</td>\n",
+       "      <td>hour=4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   timestamp  minute                        localtime  \\\n",
+       "0 2025-05-13 04:45:00.643749      45 2025-05-13 11:45:00.643749+07:00   \n",
+       "1 2025-05-13 04:45:00.780149      45 2025-05-13 11:45:00.780149+07:00   \n",
+       "2 2025-05-13 04:45:00.780432      45 2025-05-13 11:45:00.780432+07:00   \n",
+       "3 2025-05-13 04:45:00.612240      45 2025-05-13 11:45:00.612240+07:00   \n",
+       "4 2025-05-13 04:45:00.617396      45 2025-05-13 11:45:00.617396+07:00   \n",
+       "\n",
+       "  province     district  district_id     lat      lon  main.aqi  \\\n",
+       "0    Krabi  Nuea Khlong         8108  8.0747  99.0036         1   \n",
+       "1    Krabi     Lam Thap         8107  8.0717  99.2917         1   \n",
+       "2    Krabi  Plai Phraya         8106  8.5333  98.8628         1   \n",
+       "3    Krabi  Khao Phanom         8102  8.2647  99.0492         1   \n",
+       "4    Krabi      Ao Luek         8105  8.3775  98.7217         1   \n",
+       "\n",
+       "   components_co  ...  components_o3  components_so2  components_pm2_5  \\\n",
+       "0         104.09  ...          37.94            0.03              1.54   \n",
+       "1         100.87  ...          36.42            0.04              1.43   \n",
+       "2         113.10  ...          37.97            0.12              2.16   \n",
+       "3         107.32  ...          40.48            0.03              1.81   \n",
+       "4         119.90  ...          42.27            0.08              2.94   \n",
+       "\n",
+       "   components_pm10  components_nh3             flow_timestamp       year  \\\n",
+       "0             1.95            0.01 2025-05-13 04:44:59.753761  year=2025   \n",
+       "1             1.81            0.03 2025-05-13 04:44:59.753761  year=2025   \n",
+       "2             2.65            0.04 2025-05-13 04:44:59.753761  year=2025   \n",
+       "3             2.10            0.01 2025-05-13 04:44:59.753761  year=2025   \n",
+       "4             3.25            0.01 2025-05-13 04:44:59.753761  year=2025   \n",
+       "\n",
+       "     month     day    hour  \n",
+       "0  month=5  day=13  hour=4  \n",
+       "1  month=5  day=13  hour=4  \n",
+       "2  month=5  day=13  hour=4  \n",
+       "3  month=5  day=13  hour=4  \n",
+       "4  month=5  day=13  hour=4  \n",
+       "\n",
+       "[5 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def load_data(lakefs_path):\n",
+    "    dataset = ds.dataset(\n",
+    "        lakefs_path,\n",
+    "        format=\"parquet\",\n",
+    "        partitioning=[\"year\", \"month\", \"day\", \"hour\"],\n",
+    "        filesystem=fs\n",
+    "    )\n",
+    "    table = dataset.to_table()\n",
+    "    df = table.to_pandas()\n",
+    "    \n",
+    "    return df\n",
+    "\n",
+    "pollution_path = 'pollution-data/main/pollution.parquet'\n",
+    "pollution_df = load_data(pollution_path)\n",
+    "# print('Pollution')\n",
+    "pollution_df.info()\n",
+    "pollution_df.head()"
+   ]
   }
  ],
  "metadata": {
