--- a/work/testread.ipynb
+++ b/work/testread.ipynb
@@ -804,11 +804,11 @@
     "        (ds.field(\"year\") == 2025) &\n",
     "        (ds.field(\"month\") == 5) &\n",
     "        (\n",
-    "        # (ds.field(\"day\") == 16) |\n",
-    "        # (ds.field(\"day\") == 17) |\n",
+    "         (ds.field(\"day\") == 16) |\n",
+    "         (ds.field(\"day\") == 17) |\n",
     "        (ds.field(\"day\") == 18)\n",
-    "        ) &\n",
-    "        (ds.field(\"hour\") == 12)\n",
+    "        )\n",
+    "        # (ds.field(\"hour\") == 12)\n",
     "    )\n",
     ")\n",
     "# df_filtered = filtered.to_pandas()\n",
